--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
+@font-face{
+  font-family: "NanumPenScript";
+  src: url('/NanumPenScript-Regular.ttf')
+}
+
 * {color: #232323;}
+body{
+  font-family: "NanumPenScript";
+}
