--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@ html, body{
   height: 100%;
   box-shadow: rgba(100, 100, 100, 0.2) 0px 0px 29px 0;
 }
-body*{
+body{
   font-family: "NanumPenScript";
 }
