button, header UI 스타일링 및 세팅

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -5,5 +5,12 @@
     border-radius: 5px;
     padding: 10px 20px;
     font-size: 18px;
-    white-space: nowrap; /*줄바굼 금지*/
+    white-space: nowrap; /*줄바꿈 금지*/
+}
+.Button_POSITIVE{
+    background-color: rgb(100, 201, 100);
+}
+.Button_NAGATIVE{
+    background-color: rgb(253, 86, 95);
+    color: #fff;
 }
