--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,9 @@ html, body{
   min-height: 100vh;
   height: 100%;
   box-shadow: rgba(100, 100, 100, 0.2) 0px 0px 29px 0;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
-body{
+body * {
   font-family: "NanumPenScript";
 }
