새 일기 쓰기

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -9,6 +9,7 @@
 }
 .Button_POSITIVE{
     background-color: rgb(100, 201, 100);
+    color: #fff;
 }
 .Button_NAGATIVE{
     background-color: rgb(253, 86, 95);
